# liquidity-stress-radar

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  references.bib  requirements.txt
.streamlit/: config.toml
data/: fold_coefs.csv  model_params.npz  panel_snapshot.parquet  predictions.parquet
data/robustness/: calibration.csv  coef_stability.csv  data_coverage.csv  horizon_sensitivity.csv  metric_ci.csv  model_comparison.csv  subperiod.csv  summary.json  threshold_sensitivity.csv
scripts/: 00_offline_smoke.py  01_initial_load.py  02_train_logistic.py  03_evaluate.py  04_amihud_variants.py  05_robustness.py
src/liquidity_radar/: __init__.py  config.py
src/liquidity_radar/dashboard/: app.py  loaders.py
src/liquidity_radar/data/: __init__.py  ingest.py  quality.py  schema.py  store.py
src/liquidity_radar/eval/: __init__.py  backtest.py  metrics.py  plots.py  robustness.py
src/liquidity_radar/features/: __init__.py  build.py  liquidity.py  macro.py  target.py  technical.py  volatility.py
src/liquidity_radar/models/: __init__.py  baseline.py  logistic.py  walkforward.py
tests/: test_features_models.py  test_phase2.py  test_robustness.py  test_smoke.py
