[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "liquidity-stress-radar"
version = "0.1.0"
description = "Predicting S&P 500 drawdowns from microstructure liquidity signals"
requires-python = ">=3.11"
authors = [{ name = "TUM CEFS Term Project Team" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
