[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "liquidity-stress-radar"
version = "0.1.0"
description = "Predicting S&P 500 drawdowns from microstructure liquidity signals"
requires-python = ">=3.11"
authors = [{ name = "TUM CEFS Term Project Team" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
# E501: line length handled by formatter.
# N803/N806: X, y, C are standard ML/sklearn names for design matrices and the
# regularisation constant; lowercasing them would obscure conventional notation.
ignore = ["E501", "N803", "N806"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
